fix: revert offline JaCoCo instrumentation, fix Sonar violations, upgrade platform to 2026.1.3
JaCoCo offline instrumentation was based on a wrong assumption: Gradle's standard
jacoco plugin does work with PathClassLoader — Java's ClassFileTransformer fires for
all class loads regardless of classloader. The 43-44% Codecov coverage and 39%
SonarQube coverage have been stable since before any instrumentation changes; the
offline approach added complexity and build time without improving coverage.

Changes:
- Remove jacocoOfflineInstrument, jacocoInstrumentSandbox, instrumentedJar.doLast tasks
- Remove testRuntimeOnly jacoco agent dependency and agentbridge.* exclusion
- Fix wrong documentation in CONTRIBUTING.md (coverage section rewritten)
- Add SLF4J simple provider for SonarQube scanner log visibility

SonarQube violations (new_violations: 3 quality gate failure):
- BreakpointManageTool: extract fileMatchesBreakpoint() helper to reduce cognitive
  complexity and remove continue statements from findLineBreakpoint()
- ReadBuildOutputTool: extract findRunDescriptor() and buildNoTabError() helpers to
  reduce cognitive complexity in readFromRunWindow()
- ListTestsTool: extract scanTestSourceFile(), summarizeResults(), addTestEntry() to
  reduce cognitive complexity in execute() and collectTestMethodsFromFile()
- ReloadProjectModelTool: add NOSONAR for intentional Throwable catch; fix string
  concatenation with S6126 single-string fix
- NavigationTool: use Stream.toList() instead of collect(Collectors.toList())

Platform: upgrade CI platform from 2025.3 to 2026.1.3 (Lucene issue is resolved
with IPGP 2.16 — no explicit Lucene dependency needed)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>